--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -10,6 +10,12 @@
                 "kind": "build",
                 "isDefault": true
             }
-        }
+        },
+        {
+            "label": "Zig Build Windows",
+            "type": "shell",
+            "command": "zig build -Dtarget=x86_64-windows",
+            "problemMatcher": [],
+        },
     ]
 }
